<resources>
    <string name="app_name">HD_Wallpaper</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="description">Amazing Wallpaper in your way</string>
    <string name="menu_latest">Latest</string>
    <string name="menu_category">Category</string>
    <string name="menu_gifs">GIFs</string>
    <string name="menu_favorite">My favorites</string>
    <string name="menu_rate">Rate app</string>
    <string name="menu_more">More app</string>
    <string name="menu_about">About US</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_primary">Primary Police</string>

    <string name="textAbout">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_latest">Latest</string>
    <string name="title_category">Category</string>
    <string name="title_gifs">GIFs</string>
    <string name="title_frag_favorite">My favorites</string>
    <string name="title_rate">Rate</string>
    <string name="title_more">More</string>
    <string name="title_about">About</string>
    <string name="title_setting">Setting</string>
    <string name="title_primary">Primary Police</string>
    <string name="more">More</string>
    <string name="view">10</string>
    <string name="love">10</string>

</resources>
