<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <item
        android:id="@+id/nav_latest"
        android:icon="@drawable/home"
        android:title="@string/menu_latest" />
    <item
        android:id="@+id/nav_category"
        android:icon="@drawable/category"
        android:title="@string/menu_category" />
    <item
        android:id="@+id/nav_gifs"
        android:icon="@drawable/gifs"
        android:title="@string/menu_gifs" />
    <item
        android:id="@+id/nav_favorite"
        android:icon="@drawable/favorites"
        android:title="@string/menu_favorite" />


    <item
        android:id="@+id/nav_rate"
        android:icon="@drawable/rateapp"
        android:title="@string/menu_rate" />
    <item
        android:id="@+id/nav_more"
        android:icon="@drawable/moreapp"
        android:title="@string/menu_more" />
    <item
        android:id="@+id/nav_about"
        android:icon="@drawable/about"
        android:title="@string/menu_about" />
    <item
        android:id="@+id/nav_setting"
        android:icon="@drawable/seting"
        android:title="@string/menu_setting" />
    <item
        android:id="@+id/nav_primary"
        android:icon="@drawable/police"
        android:title="@string/menu_primary" />

</menu>
